# funny_code_samples

./: .gitignore  CMakeLists.txt  cmake-variants.yaml
.cache/clangd/index/: main.cpp.CEBBDBF855363D48.idx
cmake/: Test.cmake
src/: CMakeLists.txt
src/meta/: static_env.hpp
tests/: CMakeLists.txt
tests/arcane/reflector/: unit.cpp
tests/arcane/static_env/: unit.cpp
tests/common/meta/: unit.cpp
tests/common/pack/: unit.cpp
tests/common/tag_invoke/: unit.cpp
tests/interface/: unit.cpp
tests/type_erasure/: mock.hpp  unit.cpp
util/: CMakeLists.txt
util/arcane/: reflector_base.hpp  static_env.hpp
util/common/: first_of.hpp  insert.hpp  signature.hpp  tag_invoke.hpp
util/common/meta/: decay.hpp  fixed_string.hpp  is_instance.hpp  replace.hpp
util/common/tag_invoke/: generic_cpo.hpp  typed_cpo.hpp
util/common/type_pack/: erase.hpp  first_of.hpp  fold.hpp  insert.hpp  pack.hpp  replace_all.hpp  to_pack.hpp
util/interface/: fragment.hpp  mock.cpp  mock.hpp  trait_base.hpp
util/type_erasure/: any_object.hpp  constructor_concept.hpp  constructor_cpo.hpp  erased_tag_invoker.hpp  storage.hpp  this.hpp  value_wrapper.hpp  vtable.hpp  wrapped_tag_invoker.hpp
util/type_erasure/detail/: constructor_concept.hpp  constructor_cpo.hpp  erased_tag_invoker.hpp  replace_this.hpp  storage.hpp  this.hpp  value_wrapper.hpp  vtable.hpp  wrapped_tag_invoker.hpp
utility/: CMakeLists.txt
utility/arcane/: static_env.hpp
